mk8s-iris.yml
apiVersion: v1
kind: Service
metadata:
  name: iris-ext
  labels:
    app: iris
spec:
  type: LoadBalancer
  selector:
    app: iris
  ports:
  - protocol: TCP
    port: 52773
    targetPort: 52773
---

apiVersion: v1
kind: Service
metadata:
  name: iris
  labels:
    app: iris
spec:
  ports:
  - port: 52773
    protocol: TCP
    name: http
  clusterIP: None # Headless Service
  selector:
    app: iris
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: data
spec:
  selector:
    matchLabels:
      app: iris
  serviceName: "iris"
  replicas: 2
  template:
    metadata:
      labels:
        app: iris
    spec:
      securityContext: 
        fsGroup: 52773
      containers:
      - name: iris
        image: intersystemsdc/iris-community:2021.1.0.215.3-zpm
        ports:
        - containerPort: 1972
        - containerPort: 52773
        volumeMounts:
        - mountPath: /irissys/cpf/
          name: iris-cpf
        - mountPath: /iris-mgr
          name: dbv-mgr
        - mountPath: /vol-data
          name: dbv-data
      volumes:
      - configMap:
          defaultMode: 420
          name: iris-merge-cpf
        name: iris-cpf
  volumeClaimTemplates:
  - metadata:
      name: dbv-mgr
      labels:
        app: iris
    spec:
      accessModes: [ "ReadWriteOnce" ]
      #storageClassName: longhorn
      resources:
        requests:
          storage: 5Gi
  - metadata:
      name: dbv-data
      labels:
        app: iris
    spec:
      accessModes: [ "ReadWriteOnce" ]
      #storageClassName: longhorn
      resources:
        requests:
          storage: 5Gi
